<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">SmartLife</string>
	<string name="hello_world">Hello world!</string>
	<string name="action_settings">Settings</string>
	<string name="text_task">活动</string>
	<string name="text_group">群组</string>
	<string name="text_person">我</string>
	<string name="back">&lt;</string>
	<string name="input_email_hint">请输入邮箱账号</string>
	<string name="input_password_hint">请输入密码</string>
	<string name="input_username_hint">请输入用户名（昵称）</string>
	<string name="login">登录</string>
	<string name="register">注册</string>
	<string name="text_reg_hint">没有账号？</string>
	<string name="text_reg_link"><u>点此注册</u></string>
	<string name="text_login_hint">已有账号？</string>
	<string name="text_login_link"><u>点此登录</u></string>
	<string name="text_my_group">我的群组</string>
	<string name="text_group_msg">群组消息</string>
	<string name="text_group_manager">群组管理</string>
	<string name="input_group_name_hint">请输入群组名称（10字内）</string>
	<string name="input_group_description_hint">请输入群组简介（100字内）</string>
	<string name="person_info">个人资料</string>
	<string name="person_change_username">修改用户名</string>
	<string name="person_change_password">修改密码</string>
	<string name="person_create_activity">创建活动</string>
	<string name="person_exit">退出</string>
	<string name="person_change">切换账号</string>
	<string name="person_software">软件相关</string>
	<string name="person_info_email">邮箱</string>
	<string name="person_info_username">用户名</string>
	<string name="person_pre_password">旧密码</string>
	<string name="person_new_password">新密码</string>
	<string name="pserson_ok">确认</string>
	<string name="text_group_manage">群组管理</string>
	<string name="text_create_group">创建群组</string>
	<string name="text_search_group">查找群组</string>
	<string name="text_search">查找</string>
	<string name="text_join">申请加入</string>
	<string name="text_view_request">查看群组申请</string>
	<string name="text_invite">邀请用户加入</string>
	<string name="text_group_member">群组成员</string>
	<string name="text_view_group_member">查看群组成员</string>
	<string name="text_view_group_task">查看群组活动</string>
	<string name="text_join_request_list">申请列表</string>
	<string name="btn_agree">同意</string>
	<string name="btn_refuse">拒绝</string>
	<string name="today_s_task">今天的活动</string>
	<string name="remind_true">提醒:是</string>
	<string name="frequence_is_repeat_each_week">频率:不重复</string>
	<string name="fragment_task_title">任务</string>
	<string name="task_info">任务信息</string>
	<string name="time_setting">时间设置</string>
	<string name="remind_setting">提醒设置</string>
	<string name="task_title">任务标题</string>
	<string name="task_content">任务内容</string>
	<string name="start_date">开始日期</string>
	<string name="start_time">开始时间</string>
	<string name="end_date">结束日期</string>
	<string name="end_time">结束时间</string>
	<string name="is_remind">是否提醒</string>
	<string name="remind_frequence">提醒频率</string>
	<string name="today">2014年6月20日</string>
	<string name="title_activity_create_task">CreateTaskActivity</string>

	<string-array name="frequence">
		<item>不重复</item>
		<item>每天</item>
		<item>每周</item>
	</string-array>

</resources>
