<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:background="#EEE"
	android:padding="15dp" >

	<TextView
		style="@style/create_task_tv_title"
		android:text="@string/task_info" />

	<View
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="@color/default_blue" />

	<TextView
		android:id="@+id/textView2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="10dp"
		android:layout_marginTop="10dp"
		android:text="@string/task_title"
		android:textAppearance="?android:attr/textAppearanceMedium" />

	<TextView
		android:id="@+id/textView3"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="10dp"
		android:text="@string/task_content"
		android:textAppearance="?android:attr/textAppearanceMedium" />

	<TextView
		style="@style/create_task_tv_title"
		android:text="@string/time_setting" />

	<View
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="@color/default_blue" />

	<TextView
		android:id="@+id/textView5"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="10dp"
		android:layout_marginTop="10dp"
		android:text="@string/start_date"
		android:textAppearance="?android:attr/textAppearanceMedium" />

	<TextView
		android:id="@+id/textView6"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="10dp"
		android:text="@string/start_time"
		android:textAppearance="?android:attr/textAppearanceMedium" />

	<TextView
		android:id="@+id/textView7"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="10dp"
		android:text="@string/end_date"
		android:textAppearance="?android:attr/textAppearanceMedium" />

	<TextView
		android:id="@+id/textView8"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="10dp"
		android:text="@string/end_time"
		android:textAppearance="?android:attr/textAppearanceMedium" />

	<TextView
		android:id="@+id/textView9"
		style="@style/create_task_tv_title"
		android:text="@string/remind_setting" />

	<View
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="@color/default_blue" />

	<TextView
		android:id="@+id/textView10"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="10dp"
		android:layout_marginTop="10dp"
		android:text="@string/is_remind"
		android:textAppearance="?android:attr/textAppearanceMedium" />

	<TextView
		android:id="@+id/textView11"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="10dp"
		android:text="@string/remind_frequence"
		android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>