<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="#EEE"
	android:padding="15dp" >

	<TextView
		android:id="@+id/task_info_title"
		style="@style/task_tv_title"
		android:text="@string/task_info" />

	<View
		android:id="@+id/task_info_line"
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:layout_below="@+id/task_info_title"
		android:background="@color/default_blue" />

	<TextView
		android:id="@+id/task_title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/task_info_line"
		android:layout_marginBottom="10dp"
		android:layout_marginTop="10dp"
		android:text="@string/task_title"
		android:textSize="@dimen/task_text_size" />

	<EditText
		android:id="@+id/task_et_task_title"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignBaseline="@+id/task_title"
		android:layout_alignBottom="@+id/task_title"
		android:layout_marginLeft="20dp"
		android:layout_toRightOf="@+id/task_title"
		android:hint="活动标题，不能为空"
		android:textSize="@dimen/task_et_text_size" />

	<EditText
		android:id="@+id/task_et_task_content"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignBaseline="@+id/task_content"
		android:layout_alignBottom="@+id/task_content"
		android:layout_alignLeft="@+id/task_et_task_title"
		android:hint="活动内容"
		android:textSize="@dimen/task_et_text_size" />

	<TextView
		android:id="@+id/task_content"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/task_title"
		android:layout_marginBottom="10dp"
		android:text="@string/task_content"
		android:textSize="@dimen/task_text_size" />

	<TextView
		android:id="@+id/task_time"
		style="@style/task_tv_title"
		android:layout_below="@+id/task_content"
		android:text="@string/time_setting" />

	<View
		android:id="@+id/task_time_line"
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:layout_alignParentLeft="true"
		android:layout_below="@+id/task_time"
		android:background="@color/default_blue" />

	<TextView
		android:id="@+id/task_start_date"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/task_time_line"
		android:layout_marginBottom="10dp"
		android:layout_marginTop="10dp"
		android:text="@string/start_date"
		android:textSize="@dimen/task_text_size" />

	<EditText
		android:id="@+id/task_tv_start_date"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignBaseline="@+id/task_start_date"
		android:layout_alignBottom="@+id/task_start_date"
		android:layout_alignLeft="@+id/task_et_task_title"
		android:hint="今天的日期"
		android:textSize="@dimen/task_et_text_size" />

	<TextView
		android:id="@+id/task_end_date"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignLeft="@+id/task_start_date"
		android:layout_below="@+id/task_start_date"
		android:layout_marginBottom="10dp"
		android:text="@string/end_date"
		android:textSize="@dimen/task_text_size" />

	<EditText
		android:id="@+id/task_et_end_date"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignBaseline="@+id/task_end_date"
		android:layout_alignBottom="@+id/task_end_date"
		android:layout_alignLeft="@+id/task_et_task_title"
		android:hint="今天的日期"
		android:textSize="@dimen/task_et_text_size" />

	<TextView
		android:id="@+id/task_start_time"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignLeft="@+id/task_end_date"
		android:layout_below="@+id/task_end_date"
		android:layout_marginBottom="10dp"
		android:text="@string/start_time"
		android:textSize="@dimen/task_text_size" />

	<EditText
		android:id="@+id/task_et_start_time"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignBaseline="@+id/task_start_time"
		android:layout_alignBottom="@+id/task_start_time"
		android:layout_alignLeft="@+id/task_et_task_title"
		android:hint="开始时间"
		android:textSize="@dimen/task_et_text_size" />

	<TextView
		android:id="@+id/task_end_time"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignLeft="@+id/task_start_time"
		android:layout_below="@+id/task_start_time"
		android:layout_marginBottom="10dp"
		android:text="@string/end_time"
		android:textSize="@dimen/task_text_size" />

	<EditText
		android:id="@+id/task_et_end_time"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignBaseline="@+id/task_end_time"
		android:layout_alignBottom="@+id/task_end_time"
		android:layout_alignLeft="@+id/task_et_task_title"
		android:hint="结束时间"
		android:textSize="@dimen/task_et_text_size" />

	<TextView
		android:id="@+id/task_is_remind_title"
		style="@style/task_tv_title"
		android:layout_below="@+id/task_end_time"
		android:text="@string/remind_setting" />

	<View
		android:id="@+id/task_is_remind_title_line"
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:layout_alignLeft="@+id/task_info_title"
		android:layout_below="@+id/task_is_remind_title"
		android:background="@color/default_blue" />

	<TextView
		android:id="@+id/task_is_remind"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_below="@+id/task_is_remind_title_line"
		android:layout_marginBottom="10dp"
		android:layout_marginTop="10dp"
		android:text="@string/is_remind"
		android:textSize="@dimen/task_text_size" />

	<CheckBox
		android:id="@+id/task_cb_is_remind"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignBaseline="@+id/task_is_remind"
		android:layout_centerHorizontal="true" />

	<TextView
		android:id="@+id/task_frequence"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignLeft="@+id/task_is_remind"
		android:layout_below="@+id/task_is_remind"
		android:layout_marginBottom="10dp"
		android:text="@string/remind_frequence"
		android:textSize="@dimen/task_text_size" />

	<Spinner
		android:id="@+id/task_spinner_frequence"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignBaseline="@+id/task_frequence"
		android:layout_centerHorizontal="true"
		android:entries="@array/frequence"
		android:paddingLeft="5dp"
		android:paddingRight="5dp"
		android:textSize="@dimen/task_et_text_size" />

	<Button
		android:id="@+id/task_btn_confirm"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/task_frequence"
		android:background="@drawable/btn_default_blue_selector"
		android:text="创建活动" />

</RelativeLayout>