<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="5dip"
    android:paddingBottom="5dip"
    android:paddingLeft="10dip"
    android:paddingRight="10dip"
    android:orientation="horizontal"
    android:gravity="center" >

    <TextView
        android:id="@+id/text_my_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="5dip"
        android:gravity="center"
        android:background="@drawable/tab_header_left_selector"
        android:textColor="@color/tab_header_text_color"
        android:text="@string/text_my_group" />

    <TextView
        android:id="@+id/text_group_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="5dip"
        android:gravity="center"
        android:background="@drawable/tab_header_middle_selector"
        android:textColor="@color/tab_header_text_color"
        android:text="@string/text_group_msg" />

    <TextView
        android:id="@+id/text_group_manage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="5dip"
        android:gravity="center"
        android:background="@drawable/tab_header_right_selector"
        android:textColor="@color/tab_header_text_color"
        android:text="@string/text_group_manage" />

</LinearLayout>
