<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<TextView 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:text="@string/text_person"
	    />
	
    <RelativeLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
        	android:padding="10dip">
		    
		    <ImageView
		        android:id="@+id/ic_person_head_pic"
		        android:contentDescription="@string/app_name"
		        android:layout_width="32dip"
		        android:layout_height="32dip"
		        android:layout_alignParentLeft="true"
		        android:layout_centerVertical="true"
		        android:src="@drawable/ic_person_head_default" />
		    
		    
		    <TextView 
            	android:id="@+id/ic_person_head_text"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_toRightOf="@id/ic_person_head_pic"
	            android:layout_centerVertical="true"
	            android:padding="10dip"
	            android:textColor="#0d9bde"
	            android:textSize="15sp"
	            android:text="@string/person_info" /> 
	
	</RelativeLayout>
	
    <RelativeLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
        	android:padding="10dip">
		    
		    <ImageView
		        android:id="@+id/ic_person_change_password_pic"
		        android:contentDescription="@string/app_name"
		        android:layout_width="32dip"
		        android:layout_height="32dip"
		        android:layout_alignParentLeft="true"
		        android:layout_centerVertical="true"
		        android:src="@drawable/ic_reg_login_pwd" />
		    
		    <TextView 
            	android:id="@+id/ic_person_change_password_text"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_toRightOf="@id/ic_person_change_password_pic"
	            android:layout_centerVertical="true"
	            android:padding="10dip"
	            android:textColor="#0d9bde"
	            android:textSize="15sp"
	            android:text="@string/person_change_password" />
		    
		</RelativeLayout>
        
        <View 
		    	android:layout_width="match_parent"
		    	android:layout_height="0.5dp"
		    	android:background="#d5d5d5"/>
		
        
</LinearLayout>
